--- a/app/src/main/res/layout/view_city_not_found.xml
+++ b/app/src/main/res/layout/view_city_not_found.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
 
     <ImageView
             android:id="@+id/iv_search_city"
@@ -15,8 +14,7 @@
             android:src="@drawable/ic_search_city"
             app:layout_constraintBottom_toTopOf="@+id/tv_no_cities"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-    />
+            app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
             android:id="@+id/tv_no_cities"
@@ -25,7 +23,7 @@
             android:layout_marginStart="@dimen/margin_16"
             android:layout_marginEnd="@dimen/margin_16"
             android:gravity="center"
-            android:text="@string/fragment_cities.no_cities"
+            android:text="@string/fragment_weather.no_cities"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
