--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,4 +3,5 @@
         android:id="@+id/fl_container"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:background="@android:color/white"
         android:layout_height="match_parent"/>
