--- a/app/src/main/res/layout/fragment_cities.xml
+++ b/app/src/main/res/layout/fragment_cities.xml
@@ -40,15 +40,12 @@
                 <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_12"
-                        android:layout_marginBottom="@dimen/margin_12"
                         app:srcCompat="@drawable/ic_search" />
 
-                <androidx.appcompat.widget.AppCompatEditText
+                <EditText
                         android:id="@+id/et_search"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
                         android:backgroundTint="@color/light_gray"
                         android:hint="@string/fragment_cities.edittext.hint"
                         android:imeOptions="actionDone"
@@ -58,6 +55,7 @@
                         android:textColor="@color/dark_gray"
                         android:textColorHint="@color/dark_gray"
                         android:textSize="@dimen/text_size_14" />
+
             </LinearLayout>
 
         </androidx.appcompat.widget.Toolbar>
