--- a/app/src/main/res/layout/item_hourly.xml
+++ b/app/src/main/res/layout/item_hourly.xml
@@ -19,12 +19,13 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="7:00"/>
 
-    <ImageView
+    <com.ar4i.weather.presentation.custom.CircleImageView
             android:id="@+id/iv_state"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/hourly_image_size"
+            android:layout_height="@dimen/hourly_image_size"
             android:layout_marginStart="@dimen/margin_16"
             android:layout_marginEnd="@dimen/margin_16"
+            app:civ_borderColor="@color/blue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_time"
